# AquaShoko-Gazebo

./: AquaShokoControl.world  AquaShokoWorld1  AquaShokoWorld2  CMakeLists.txt  RoboControl1  _DS_Store  aquashoko.h  aquashoko.py  longLegAquaShoko.world  package.xml  roboControl.cc  roboControl.py  roboControl7.txt  roboControl8.txt  roboControl9.txt  shortLegAquaShoko.world  testRobotControl.py
AquaShokoSimple/: model.config  model.sdf
ArchiveRoboControl/: RoboControl2  RoboControl3  RoboControl4.txt  roboControl10.txt  roboControl5.txt  roboControl6.txt  textStuff.txt
ComplexAquaShoko/: model.config  model.sdf
ComplexAquaShoko/meshes/: HornToHornLink.dae  endLegLink.dae
ComplexAquaShokoLongLeg/: model.config  model.sdf
ComplexAquaShokoLongLeg/meshes/: HornToHornLink.dae  endLegLink.dae
MeshTest/: BaseLink_mesh.world  HornToHorn_mesh.world  _DS_Store  endLegLink.dae  endLegLink_mesh.world  middleLegLink_mesh.world
launch/: spawn_aquashoko_gazebo.launch
